--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
 <body>
   <main>
     {% block content %}
+        <p><a href="{% url '' %}">-Go to games list-</a></p>
     {% endblock %}
   </main>
 </body>
